# kernel-ai-assistant

./: .cgcignore  .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  gradle.properties  settings.gradle.kts  specification.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: android-developer.agent.md  code-reviewer.agent.md  coordinator.agent.md  llm-engineer.agent.md  spec-writer.agent.md  test-writer.agent.md  wasm-skill-author.agent.md
.github/workflows/: ci.yml  cleanup-old-releases.yml  pr-cleanup.yml
.opencode/: AGENTS.md
.opencode/agents/: android-developer.md  code-reviewer.md  coordinator.md  llm-engineer.md  spec-writer.md  test-writer.md  wasm-skill-author.md
.opencode/plans/: 645-verbose-rag-logging.md
.squad/: .first-run  team.md
.squad/identity/: now.md  wisdom.md
app/: build.gradle.kts  proguard-rules.pro
core/inference/: build.gradle.kts
core/memory/: build.gradle.kts
core/memory/src/main/cpp/: CMakeLists.txt  kernel_vec_jni.cpp
core/skills/: build.gradle.kts
core/ui/: build.gradle.kts
core/voice/: build.gradle.kts
core/wasm/: build.gradle.kts
docs/: PLAN.md  ROADMAP.md  SPECIFICATION.md  adb-testing.md  automated-testing.md  nz-truth-memories.md  phase-3f-voice-foundations-plan.md  pr-816-handoff.md
docs/research/: bert-intent-classifier-research.md  clock-system-spec.md  (+5 more)
gradle/: libs.versions.toml
keystore/: debug.keystore
models/: README.md
scripts/: adb_skill_test.py  convert_piper_voice.py  generate_report.py  setup-android-cli.sh  setup-sherpa-tts-spike.sh
(+457 files in other folders)
